# Gen-Ai-Both-with-Rag

./: README.md  main.py  pyproject.toml  requirements.txt
src/: app.py
